--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "KS Portfolio",
+  "name": "kate-sylvester-explore",
   "version": "1.0.0",
   "main": "gatsby-config.js",
   "author": "Harrison Molloy",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/harrisonmolloy/Kate-Sylvester-Explore"
+  },
   "dependencies": {
     "@babel/core": "^7.7.7",
     "@loadable/component": "^5.12.0",
