--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-transformer-sharp": "^2.3.9",
     "lazy-react": "^2.1.0",
     "node-sass": "^4.13.0",
+    "npm-check-updates": "^4.0.1",
     "prettier": "^1.19.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
