--- a/package.json
+++ b/package.json
@@ -1,33 +1,30 @@
 {
-  "name": "kate-sylvester-explore",
-  "version": "1.0.0",
-  "main": "gatsby-config.js",
-  "author": "Harrison Molloy",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/harrisonmolloy/Kate-Sylvester-Explore"
-  },
-  "dependencies": {
-    "@babel/core": "^7.7.7",
-    "@loadable/component": "^5.12.0",
-    "gatsby": "^2.18.15",
-    "gatsby-image": "^2.2.38",
-    "gatsby-page-utils": "0.0.37",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.1.26",
-    "gatsby-plugin-sharp": "^2.3.9",
-    "gatsby-source-filesystem": "^2.1.42",
-    "gatsby-transformer-sharp": "^2.3.9",
-    "lazy-react": "^2.1.0",
-    "node-sass": "^4.13.0",
-    "npm-check-updates": "^4.0.1",
-    "prettier": "^1.19.1",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-image-lazy-load": "^1.3.0",
-    "react-lazy-load": "^3.0.13",
-    "react-lazyload": "^2.6.5",
-    "typescript": "^3.7.3"
-  }
+	"name": "kate-sylvester-explore",
+	"version": "1.0.0",
+	"main": "gatsby-config.js",
+	"author": "Harrison Molloy",
+	"dependencies": {
+		"gatsby": "^2.18.15",
+		"gatsby-image": "^2.2.38",
+		"gatsby-plugin-react-helmet": "^3.1.18",
+		"gatsby-plugin-react-svg": "^3.0.0",
+		"gatsby-plugin-sass": "^2.1.26",
+		"gatsby-plugin-sharp": "^2.3.9",
+		"gatsby-source-filesystem": "^2.1.42",
+		"gatsby-transformer-sharp": "^2.3.9",
+		"react": "*",
+		"react-dom": "*",
+		"react-helmet": "*",
+		"react-lazy-load": "*",
+		"typescript": "^3.7.4",
+		"node-sass": "^4.13.0"
+	},
+	"devDependencies": {
+		"sass": "^1.24.4",
+		"prettier": "^1.19.1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/harrisonmolloy/Kate-Sylvester-Explore"
+	}
 }
