--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"author": "Harrison Molloy",
 	"dependencies": {
 		"gatsby": "^2.18.15",
+		"gatsby-cli": "^2.8.27",
 		"gatsby-image": "^2.2.38",
 		"gatsby-plugin-react-helmet": "^3.1.18",
 		"gatsby-plugin-react-svg": "^3.0.0",
@@ -12,12 +13,9 @@
 		"gatsby-plugin-sharp": "^2.3.9",
 		"gatsby-source-filesystem": "^2.1.42",
 		"gatsby-transformer-sharp": "^2.3.9",
-		"react": "*",
-		"react-dom": "*",
-		"react-helmet": "*",
-		"react-lazy-load": "*",
-		"typescript": "^3.7.4",
-		"node-sass": "^4.13.0"
+		"node-sass": "^4.13.0",
+		"react-helmet": "^5.2.1",
+		"typescript": "^3.7.4"
 	},
 	"devDependencies": {
 		"sass": "^1.24.4",
