--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"gatsby-source-filesystem": "^2.1.42",
 		"gatsby-transformer-sharp": "^2.3.9",
 		"node-sass": "^4.13.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
+		"react-lazyload": "^2.6.5",
 		"typescript": "^3.7.4"
 	},
 	"devDependencies": {
