--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
+		"react-lazy-load": "^3.0.13",
 		"react-lazyload": "^2.6.5",
 		"typescript": "^3.7.4"
 	},
