--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"gatsby": "^2.18.15",
 		"gatsby-cli": "^2.8.27",
 		"gatsby-image": "^2.2.38",
+		"gatsby-plugin-manifest": "^2.2.37",
 		"gatsby-plugin-react-helmet": "^3.1.18",
 		"gatsby-plugin-react-svg": "^3.0.0",
 		"gatsby-plugin-sass": "^2.1.26",
@@ -17,6 +18,7 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
+		"react-lazy-load": "^3.0.13",
 		"typescript": "^3.7.4"
 	},
 	"devDependencies": {
